<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/auth_title"
        app:layout_constraintBottom_toTopOf="@id/auth_input_area"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth"
        style="@style/title"
        android:layout_marginVertical="6dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/auth_input_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp">

        <EditText
            android:id="@+id/username_input"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/username"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/inputField"
            android:textColor="@color/white"
            android:layout_marginVertical="12dp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_input"
            style="@style/inputField"
            android:textColor="@color/white"
            android:layout_marginVertical="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/log_in_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/log_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_input"
            style="@style/startButton"
            android:layout_marginVertical="18dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>